--- a/wp-content/themes/wallstreet/style.css
+++ b/wp-content/themes/wallstreet/style.css
@@ -413,7 +413,7 @@ body {
         font-size: 18px;
         padding-right: 0.5em;
         position: absolute;
-        top: 50px;
+        top: 45px;
         left: -5px;
     }
     .home-portfolio-area:first-child:before {
@@ -443,13 +443,19 @@ body {
     width: 100%;
     height: 100%;
 }
-.home-portfolio-showcase-overlay-inner {
-    left: 0;
-    position: absolute;
-    top: 40%;
-    width: 100%;
+.home-portfolio-showcase-detail {
     border: 1px solid #000;
     padding: 20px;
+    float: left;
+    text-align: center;
+}
+.home-portfolio-showcase-detail h4 {
+    color: #000;
+    border-bottom: 1px solid #000;
+    font-family: 'Roboto';
+    font-weight: 500;
+    line-height: 20px;
+    font-size: 18px;
 }
 .home-portfolio-showcase .home-portfolio-showcase-detail {
     margin-top: 20px;
