edit css for slider and image at main page (from post)

--- a/wp-content/themes/leo/css/default.css
+++ b/wp-content/themes/leo/css/default.css
@@ -572,5 +572,5 @@ article.format-aside .aside { background: none repeat scroll 0 0 #d2e0f9; border
 }
 
 .home-blog-post-img img {
-	width: 100%zxcxz;
+	width: 100%;
 }
